# mcp_llm_behave

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: claude_desktop_config.json
src/mcp_llm_behave/: __init__.py  server.py  tools.py
tests/: test_e2e.py  test_server.py  test_tools.py
